# c-actors

./: .gitignore  CMakeLists.txt  README.md  cmake-release.sh  makefile  makefile.bak  tmux-init.sh  todo.md
src/: actor.c  actor.h  actor_universe.c  actor_universe.h  bench_chain.c  bench_chain.h  bench_ping_pong.c  bench_ping_pong.h  bench_web.c  bench_web.h  file.c  file.h  letter.c  letter.h  log.h  main.c  message.c  message.h  threadpool.c  threadpool.h
src/benchmarks/: bench_chain.c  bench_chain.h  bench_ping_pong.c  bench_ping_pong.h  bench_web.c  bench_web.h  benchmarks.h
src/c-actors/: actor.c  actor.h  actor_universe.c  actor_universe.h  letter.c  letter.h  log.h  message.c  message.h  threadpool.c  threadpool.h
src/safe_alloc/: safe_alloc.h
tests/: async-send-test.c  example_test.c  message-test.c  sync-send-test.c
